update for open graph compatibility

--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta content="Front page for the open-source navigation tool Scarabaeus." lang="en" name="description" xml:lang="en" />
+<meta content="Scarabaeus is an open-source navigation tool being developed by the Orbital Research Cluster for Celestial Applications (ORCCA) laboratory at the University of Colorado Boulder.  Scarabaeus’ architecture is based on a modular, object-oriented, Python front end with a C++ backend for computationally intensive components.  - Measurement data-centric approach and organization. - All data and calculations are associated and carried out with attached units to ensure correctness by construction. - Integration with the open-source SPICE toolkit. - User interaction entirely through Python and/or graphical interfaces for improved usability.  Under the hood, Scarabaeus is designed for high-numerical accuracy propagation using state-of-the-art integrators with a range of dynamic models including multi-body gravity, spherical harmonics or polyhedral gravity, central body gravity, cannonball or plate-based solar radiation pressure, and impulsive or finite burn thrust models.  Scarabaeus is designed to process radiometric data as well as optical navigation measurements, to answer the needs of future deep-space exploration missions." lang="en" name="description" xml:lang="en" />
 <meta content="Scarabaeus, documentation, open-source, orbit determination, navigation, measurements, SPICE, ORCCA Labratory, CCAR, CU Boulder" name="keywords" />
+<meta property="og:title" content="Welcome to Scarabaeus!" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://ccar-orcca.github.io/scarabaeus-docs/index.html" />
+<meta property="og:site_name" content="Scarabaeus" />
+<meta property="og:description" content="Scarabaeus is an open-source navigation tool being developed by the Orbital Research Cluster for Celestial Applications (ORCCA) laboratory at the University of Colorado Boulder. Scarabaeus’ archite..." />
+<meta property="og:image" content="https://ccar-orcca.github.io/scarabaeus-docs/_images/scarabaeus_logo.png" />
+<meta property="og:image:alt" content="Scarabaeus" />
 
     <title>Welcome to Scarabaeus! &#8212; Scarabaeus  documentation</title>
   
@@ -32,11 +39,11 @@
   <link href="_static/styles/theme.css?digest=8878045cc6db502f8baf" rel="stylesheet" />
 <link href="_static/styles/pydata-sphinx-theme.css?digest=8878045cc6db502f8baf" rel="stylesheet" />
 
-    <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
-    <link rel="stylesheet" type="text/css" href="_static/plot_directive.css" />
-    <link rel="stylesheet" type="text/css" href="_static/copybutton.css" />
-    <link rel="stylesheet" type="text/css" href="_static/sphinx-design.min.css" />
-    <link rel="stylesheet" type="text/css" href="_static/custom.css" />
+    <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=8f2a1f02" />
+    <link rel="stylesheet" type="text/css" href="_static/plot_directive.css?v=7f9a90b1" />
+    <link rel="stylesheet" type="text/css" href="_static/copybutton.css?v=76b2166b" />
+    <link rel="stylesheet" type="text/css" href="_static/sphinx-design.min.css?v=95c83b7e" />
+    <link rel="stylesheet" type="text/css" href="_static/custom.css?v=cf328a27" />
   
   <!-- So that users can add custom icons -->
   <script src="_static/scripts/fontawesome.js?digest=8878045cc6db502f8baf"></script>
